--- a/Exercicios/Modulo 3/ex022/background.html
+++ b/Exercicios/Modulo 3/ex022/background.html
@@ -6,10 +6,10 @@
     <title>Testando o backgraound</title>
     <style>
         body{
-            background-image: url('pattern001.png');
+            background-image: url('imagens/pattern002.png');
             background-size: 300px;
             background-position-y:center ;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
            
         }
     </style>
