--- a/Desafios a solo/ds012 guenabara/index.html
+++ b/Desafios a solo/ds012 guenabara/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Composto por <a href="https://www.recantodasletras.com.br/poesias/3186743]">Pechisso</a></p>
+        <p>Composto por <a href="https://www.instagram.com/frankpechisso/">Pechisso</a></p>
         
     </header>
 
